[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/cooking_area.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/cutting_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/assembly_area.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/action_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/restaurant.gd" type="Script" id=5]
[ext_resource path="res://scenes/burger_patty.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/lettuce_head.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/burger_bun.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/restaurant_floor.png" type="Texture" id=9]
[ext_resource path="res://font/Ritaglio.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/Cheese.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 10 )

[node name="restaurant" type="Node2D"]
script = ExtResource( 5 )
burger_patty_scene = ExtResource( 6 )
burger_bun_scene = ExtResource( 8 )
lettuce_head_scene = ExtResource( 7 )
cheese_scene = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false

[node name="cooking_area" parent="." instance=ExtResource( 1 )]

[node name="cutting_area" parent="." instance=ExtResource( 2 )]
position = Vector2( 568, 0 )

[node name="assembly_area" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 500 )

[node name="action_menu" parent="." instance=ExtResource( 4 )]
position = Vector2( 824, 0 )

[node name="ResturantLabel" type="Label" parent="."]
margin_left = 843.0
margin_top = 621.0
margin_right = 985.0
margin_bottom = 644.0
custom_fonts/font = SubResource( 4 )
text = "RESTAURANT STATS:"

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 844.0
margin_top = 642.0
margin_right = 907.0
margin_bottom = 665.0
custom_fonts/font = SubResource( 2 )
text = "MONEY: 0"

[node name="PattiesUsedLabel" type="Label" parent="."]
margin_left = 844.0
margin_top = 665.0
margin_right = 947.0
margin_bottom = 688.0
custom_fonts/font = SubResource( 3 )
text = "Patties Used: 0"

[node name="BunsUsedLabel" type="Label" parent="."]
margin_left = 845.0
margin_top = 688.0
margin_right = 942.0
margin_bottom = 711.0
custom_fonts/font = SubResource( 3 )
text = "Buns Used: 0"

[node name="CheeseUsedLabel" type="Label" parent="."]
margin_left = 845.0
margin_top = 712.0
margin_right = 955.0
margin_bottom = 735.0
custom_fonts/font = SubResource( 3 )
text = "Cheese Used: 0"

[node name="LettuceUsedLabel" type="Label" parent="."]
margin_left = 845.0
margin_top = 735.0
margin_right = 955.0
margin_bottom = 758.0
custom_fonts/font = SubResource( 3 )
text = "Lettuce Used: 0"

[connection signal="burger_sold" from="assembly_area" to="." method="_on_assembly_area_burger_sold"]
[connection signal="cant_build_burger" from="assembly_area" to="." method="_on_assembly_area_cant_build_burger"]
[connection signal="add_burger_patty" from="action_menu" to="." method="_on_action_menu_add_burger_patty"]
[connection signal="add_lettuce" from="action_menu" to="." method="_on_action_menu_add_lettuce"]
[connection signal="build_burger" from="action_menu" to="." method="_on_action_menu_build_burger"]
[connection signal="get_burger_bun" from="action_menu" to="." method="_on_action_menu_get_burger_bun"]
[connection signal="get_cheese" from="action_menu" to="." method="_on_action_menu_get_cheese"]
[connection signal="remove_burger_patty_1" from="action_menu" to="." method="_on_action_menu_remove_burger_patty_1"]
[connection signal="remove_burger_patty_2" from="action_menu" to="." method="_on_action_menu_remove_burger_patty_2"]
[connection signal="remove_burger_patty_3" from="action_menu" to="." method="_on_action_menu_remove_burger_patty_3"]
[connection signal="remove_burger_patty_4" from="action_menu" to="." method="_on_action_menu_remove_burger_patty_4"]
[connection signal="remove_lettuce" from="action_menu" to="." method="_on_action_menu_remove_lettuce"]
